added missing package in package.json

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.20",
     "multer": "^1.4.2",
-    "sendgrid": "^5.2.3",
     "sharp": "^0.25.4",
     "validator": "^13.1.1"
   },
